Fix the oauth google and facebook avatar too small.

--- a/src/assets/css/body/Profile.css
+++ b/src/assets/css/body/Profile.css
@@ -55,7 +55,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 15vw;
+  width: 25vw;
 }
 
 .profile-userInfo h1 {
@@ -74,7 +74,6 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: row;
-  border: 1px solid black;
 }
 
 .profile-posts-container {
